fix: prettier on all files take 2

--- a/app/templates/rental.hbs
+++ b/app/templates/rental.hbs
@@ -1,2 +1,2 @@
-{{!-- rental template to actually invoke rental::detailed component --}}
+{{! rental template to actually invoke rental::detailed component }}
 <Rental::Detailed @rental={{@model}} />
