--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -462,3 +462,16 @@ p {
   position: relative;
   top: -25px;
 }
+
+.screen-reader {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+}
+
+/* stylelint-enable no-descending-specificity, media-feature-range-notation */
